--- a/src/components/IngradientForm.css
+++ b/src/components/IngradientForm.css
@@ -1,4 +1,3 @@
-
 .ingradient-form {
     display: flex;
     flex-wrap: wrap;
@@ -8,7 +7,7 @@
     margin: 65px 65px 0 65px;
 }
 
-.ingradient-form > input {
+.ingradient-form>input {
     flex-grow: 1;
     min-width: 200px;
     max-width: 400px;
@@ -18,7 +17,7 @@
     border-color: #D1D5DB;
 }
 
-.ingradient-form > button {
+.ingradient-form>button {
     width: 150px;
     background-color: black;
     color: white;
@@ -26,10 +25,30 @@
     padding: 9px 17px;
 }
 
-.ingradient-form > button:hover {
+.ingradient-form>button:hover {
     background-color: #0056b3;
 }
 
-.ingradient-form > button::before {
+.ingradient-form>button::before {
     content: "+ ";
+}
+
+.view-ingradients {
+    display: flex;
+    flex-direction: column;
+    margin: 50px 65px 0 65px;
+}
+
+.view-ingradients > h2 {
+    font-weight: 600;
+}
+
+.view-ingradients > ul {
+    display: flex;
+    flex-direction: column;
+    font-weight: 400;
+    font-size: 1.2rem;
+    color: #475467;
+    line-height: 28px;
+    gap: 20px;
 }
